testdata/baselines/reference/submodule/conformance/augmentedTypeAssignmentCompatIndexSignature.errors.txt
augmentedTypeAssignmentCompatIndexSignature.ts(15,5): error TS2322: Type '{}' is not assignable to type '{ [n: number]: Foo; }'.
  Index signature for type 'number' is missing in type '{}'.
augmentedTypeAssignmentCompatIndexSignature.ts(19,5): error TS2322: Type '() => void' is not assignable to type '{ [n: number]: Bar; }'.
  Index signature for type 'number' is missing in type '() => void'.


==== augmentedTypeAssignmentCompatIndexSignature.ts (2 errors) ====
    interface Foo { a }
    interface Bar { b }
    
    interface Object {
        [n: number]: Foo;
    }
    
    interface Function {
        [n: number]: Bar;
    }
    
    var o = {};
    var f = () => { };
    
    var v1: {
        ~~
!!! error TS2322: Type '{}' is not assignable to type '{ [n: number]: Foo; }'.
!!! error TS2322:   Index signature for type 'number' is missing in type '{}'.
        [n: number]: Foo
    } = o; // Should be allowed
    
    var v2: {
        ~~
!!! error TS2322: Type '() => void' is not assignable to type '{ [n: number]: Bar; }'.
!!! error TS2322:   Index signature for type 'number' is missing in type '() => void'.
        [n: number]: Bar
    } = f; // Should be allowed